--- a/pom.xml
+++ b/pom.xml
@@ -72,10 +72,31 @@
                         </formats>
                     </coverage>
                 </configuration>
+				
             </plugin>
-        </plugins>
-	</build>
+			<plugin>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>properties-maven-plugin</artifactId>
+				<version>1.0.0</version>
+					<executions>
+					<execution>
+					<phase>initialize</phase>
+					<goals>
+					<goal>read-project-properties</goal>
+					</goals>
+					<configuration>
+					<files>
+					<file>src/main/resources/app.properties</file>
+					</files>
+					</configuration>
+					</execution>
+					</executions>
+			</plugin>
 
+        </plugins>
+		
+	</build>
+    
 	<dependencies>
         <dependency>
             <groupId>org.mule.connectors</groupId>
