--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,15 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+	<distributionManagement>
+	      <repository>
+	      <uniqueVersion>false</uniqueVersion>
+	      <id>corp1</id>
+	      <name>local Repository</name>
+	      <url>C:\Users\nigus\OneDrive\Desktop\repo</url>
+	      <layout>default</layout>
+	    </repository>
+   </distributionManagement>
 
 	<repositories>
           <repository>
@@ -147,9 +156,9 @@
     </repositories>
 	<distributionManagement>
        <repository>
-            <id>mulesoft-releases</id>
-            <name>MuleSoft Releases Repository</name>
-            <url>https://repository.mulesoft.org/releases/</url>
+            <id>anypoint-exchange-v2</id>
+            <name>Anypoint Exchange</name>
+            <url>https://maven.anypoint.mulesoft.com/api/v2/maven</url>
             <layout>default</layout>
         </repository>
 	</distributionManagement>
