--- a/pom.xml
+++ b/pom.xml
@@ -134,8 +134,8 @@
 	      <repository>
 	      <uniqueVersion>false</uniqueVersion>
 	      <id>corp1</id>
-	      <name>local Repository</name>
-	      <url>C:\Users\nigus\OneDrive\Desktop\repo</url>
+	      <name>Sandbox</name>
+	      <url>https://anypoint.mulesoft.com/cloudhub/#/console/home/applications</url>
 	      <layout>default</layout>
 	    </repository>
    </distributionManagement>
